correct accidental spacing changes (#13)
* add the deleted extra-bottom-margin class

* fix footer height & add missing fixing width class

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -1,4 +1,4 @@
-    /*! Place your custom styles here */
+    /*! Global styles */
 
     $primary:#33cc99;
     $primary-2:#66cc99;
@@ -31,6 +31,18 @@
             width: 990px;
         }
     }
+
+    .extra-bottom-margin {
+        margin-bottom: 15px !important;
+    }
+
+    .fixing-width {
+        max-width: 100% !important;
+    }
+
+    /*xxx Global styles xxx*/
+
+
 
     .logo-top {
         @media (max-width: 420px) {
@@ -742,6 +754,8 @@ Mobile team styles
         }
     }
 
+
+
     .menu-toggle {
         background: transparent;
         box-shadow: none;
@@ -777,13 +791,12 @@ Mobile team styles
         }
     }
 
-
     footer.space--xs {
-        padding-top: 1.11428571em;
+        padding-top: 1em !important;
     }
 
-
     .footer-5 {
+
 
 
         .footer-image {
@@ -810,8 +823,4 @@ Mobile team styles
         .loning {
             margin-top: -19px;
         }
-    }
-
-    .hideme {
-        display: none;
     }
